# NumbyAI

./: .gitignore  CODEBASE_REVIEW.md  COLUMN_MAPPING_BUG_FIX.md  DEAD_CODE_REMOVAL.md  GITHUB_ISSUES.md  Makefile  README.md  STATEMENT_PROCESSING_FIX.md  Santander - January.csv  TESTING_AND_CLEANUP_REPORT.md
mcp-server/: Dockerfile  README.md  analyze_bank_statement.py  analyze_bank_statement_structure.py  analyze_csv_structure.py  analyze_polish_bank_statement.py  analyze_santander_csv.py  analyze_statement.py  bank_statement_analysis.json  categorization_result.json  categorization_results.json  categorize_results.json  categorize_simple.py  categorize_these_transactions.py  categorize_transactions.py  categorize_transactions_output.json  categorize_transactions_task.py  categorize_user_transactions.py  categorize_user_transactions_request.py  categorized_results.json  categorized_transactions.json  csv_structure_analysis.json  dashboard-test.html  finance_recon.db.backup  polish_bank_statement_analysis.json  pyproject.toml  railway.toml  requirements.txt  santander_csv_analysis.json  static_server.py  test-dashboard.html  test_preferences_qa.py  test_rest_api.py  test_save_statement_summary_qa.py  update_currency.py
mcp-server/alembic/: README.md  env.py
mcp-server/app/: __init__.py  auth.py  config.py  database.py  logger.py  main.py  security.py
mcp-server/audit/: mutate_categories_test_20251206_160735.json
mcp-server/scripts/: fix_corrupted_mappings.py  migrate_summaries_to_transactions.py
mcp-server/tests/: test_mutate_categories_qa.py  (+1 more)
web/: README.md  (+5 more)
(+101 files in other folders)
